<resources>
    <string name="app_name">StudyDesignPattern</string>
    <string name="bread_baguette">Baguette</string>
    <string name="bread_brioche">Brioche</string>
    <string name="bread_roll">Roll</string>
    <string name="drink_soju">soju</string>
    <string name="drink_bear">bear</string>
    <string name="drink_whiskey">whiskey</string>
</resources>